Autoplay muted: fix visibility detection when the source was changed.

The autoplay visibility observer is reset in various situations but
wasn't when the source of the video was change which broke use cases
such as playing A then switching to B. B would freeze to the first frame
and never update.

Bug: 804091
Change-Id: I984d4c5d67c575d3c45f50877d329264c1a6020e
Reviewed-on: https://chromium-review.googlesource.com/890942
Reviewed-by: apacible <apacible@chromium.org>
Commit-Queue: Mounir Lamouri (slow) <mlamouri@chromium.org>
Cr-Commit-Position: refs/heads/master@{#532828}
Former-commit-id: ef28e2a3c5bceaeff46da187529966bdeb194394